# hakyll-template

./: README.md  default.nix
compiler/: default.nix
compiler/site/: Main.hs  Rules.hs  site.cabal
