cabal-version: >=1.10
name: site
version: 0.1.0.0
build-type: Simple

executable site
    main-is: Main.hs
    other-modules:
        Rules
    default-language: Haskell2010
    ghc-options: -threaded
    build-depends:
        base -any,
        filepath -any,
        hakyll >=4.10,
        optparse-applicative -any
